@@ -1,4 +1,7 @@
 1.6.0
+Tided configure output.
+Added export to PDF ( page size is in prefs ).
+Added import from PDF ( will only import text from pdf ).
 Added global search for define to toolbar.
 Searching in current document now includes local defines.
 Added line nunmber of define in dropdown box when finding definition.
